[gd_scene load_steps=9 format=2]

[ext_resource path="res://addons/RoomTool/UI/icons/Add.svg" type="Texture" id=1]
[ext_resource path="res://addons/RoomTool/UI/icons/Remove.svg" type="Texture" id=2]
[ext_resource path="res://addons/RoomTool/UI/RoomToolPanel.gd" type="Script" id=3]
[ext_resource path="res://addons/RoomTool/UI/RoomSelection.gd" type="Script" id=4]
[ext_resource path="res://addons/ToolCore/UI/AnimatedTextureRect.gd" type="Script" id=5]
[ext_resource path="res://addons/ToolCore/UI/BuildMode.gd" type="Script" id=6]
[ext_resource path="res://addons/ToolCore/UI/draw_mode_anim_texture.tres" type="Texture" id=7]

[sub_resource type="ButtonGroup" id=1]

[node name="RoomToolPanel" type="VBoxContainer"]
anchor_bottom = 1.0
margin_right = 28.0
rect_min_size = Vector2( 200, 0 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 200.0
margin_bottom = 14.0
text = "RoomTool"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 18.0
margin_right = 200.0
margin_bottom = 40.0
alignment = 2

[node name="Add" type="Button" parent="HBoxContainer"]
margin_left = 140.0
margin_right = 168.0
margin_bottom = 22.0
icon = ExtResource( 1 )

[node name="Remove" type="Button" parent="HBoxContainer"]
margin_left = 172.0
margin_right = 200.0
margin_bottom = 22.0
icon = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_top = 44.0
margin_right = 200.0
margin_bottom = 143.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 200.0
margin_bottom = 31.0
text = "LMB: Place
LMB+Shift: Remove"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 35.0
margin_right = 200.0
margin_bottom = 99.0
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildMode" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 120.0
margin_bottom = 64.0
size_flags_horizontal = 3
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Single" type="CheckBox" parent="VBoxContainer/HBoxContainer/BuildMode"]
margin_right = 120.0
margin_bottom = 24.0
pressed = true
group = SubResource( 1 )
text = "Single"

[node name="Line" type="CheckBox" parent="VBoxContainer/HBoxContainer/BuildMode"]
margin_top = 28.0
margin_right = 120.0
margin_bottom = 52.0
group = SubResource( 1 )
text = "Line"

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 136.0
margin_right = 200.0
margin_bottom = 64.0
texture = ExtResource( 7 )
stretch_mode = 4
script = ExtResource( 5 )

[node name="RoomSelection" type="ItemList" parent="."]
margin_top = 147.0
margin_right = 200.0
margin_bottom = 680.0
size_flags_vertical = 3
script = ExtResource( 4 )

[node name="HSeparator3" type="HSeparator" parent="."]
margin_top = 684.0
margin_right = 200.0
margin_bottom = 688.0

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
margin_top = 692.0
margin_right = 200.0
margin_bottom = 712.0
alignment = 1

[node name="GenerateButton" type="Button" parent="HBoxContainer2"]
margin_left = 30.0
margin_right = 169.0
margin_bottom = 20.0
text = "Generate Geometry"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator4" type="HSeparator" parent="."]
margin_top = 716.0
margin_right = 200.0
margin_bottom = 720.0
[connection signal="mode_selected" from="VBoxContainer/HBoxContainer/BuildMode" to="VBoxContainer/HBoxContainer/TextureRect" method="set_frame"]
